Read MSAA Status from Skia

Currently, both Chrome and Skia maintain independent blacklists
for MSAA on certain GPUs. When Chrome believes MSAA is available
and Skia believes it is not, we can end up with rendering glitches,
as Skia will be given an MSAA buffer to use, and it will believe
it cannot raster into it.

This change reads the MSAA status from Skia and only enables MSAA
in Chrome if Skia also believes MSAA is available.

Bug: 751919
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Id8e119aab1cf9459013c300137c6aa2179528feb
Reviewed-on: https://chromium-review.googlesource.com/629897
Reviewed-by: Victor Miura <vmiura@chromium.org>
Commit-Queue: Eric Karl <ericrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505846}
Former-commit-id: e6db79b65553a1d4907217f8aaa7cb589ac976c6