cc/test/test_context_provider.cc
@@ -28,9 +28,12 @@ namespace {
 
 // Various tests rely on functionality (capabilities) enabled by these extension
 // strings.
-const char* const kExtensions[] = {
-    "GL_EXT_stencil_wrap", "GL_EXT_texture_format_BGRA8888",
-    "GL_OES_rgb8_rgba8", "GL_EXT_texture_norm16"};
+const char* const kExtensions[] = {"GL_EXT_stencil_wrap",
+                                   "GL_EXT_texture_format_BGRA8888",
+                                   "GL_OES_rgb8_rgba8",
+                                   "GL_EXT_texture_norm16",
+                                   "GL_CHROMIUM_framebuffer_multisample",
+                                   "GL_CHROMIUM_renderbuffer_format_BGRA8888"};
 
 class TestGLES2InterfaceForContextProvider : public TestGLES2Interface {
  public:
